[package]
name = "cb-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.113"
vlc-rs = "0.3.0"
chrono = "0.4.34"